--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,30 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
     "axios": "^1.13.4",
+    "clsx": "latest",
+    "lucide-react": "0.522.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
-    "@emotion/react": "^11.13.3",
-    "lucide-react": "0.522.0",
-    "clsx": "latest",
     "tailwind-merge": "latest"
   },
   "devDependencies": {
-    "@types/node": "^20.11.18",
     "@eslint/js": "^9.39.1",
+    "@types/node": "^20.11.18",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "latest",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.4",
+    "postcss": "latest",
     "tailwindcss": "3.4.17",
-    "autoprefixer": "latest",
-    "postcss": "latest"
+    "vite": "^7.2.4"
   }
 }
