--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^9.1.6",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
-    "resend": "^6.9.1"
+    "resend": "^6.9.1",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
