--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "socket": "^1.1.63",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "latest"
   },
   "devDependencies": {
