--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,13 +19,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "axios": "^1.13.4",
-    "client": "^0.0.1",
     "clsx": "latest",
     "lucide-react": "0.522.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
-    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "latest"
   },
   "devDependencies": {
