--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,6 @@ CLOUDINARY_CLOUD_NAME=dqaggxuxe
 CLOUDINARY_API_KEY=263347896226524
 CLOUDINARY_API_SECRET=bM9_EDRWU9C4rCe1w_0_6wlmmAM
 
-MAIL_USER=team.rewear.1@gmail.com
-MAIL_PASS=htrlgfluykycbnpw
-FRONTEND_URL=http://localhost:5173
+MAIL_FROM=team.rewear.1@gmail.com
+RESEND_API_KEY=re_3GHVrkfN_GWaApFzq4Wk9SbYxdk8gBGRd
+FRONTEND_URL=https://rewear-clothing-swap-platform.vercel.app/
