--- a/,github/workflows/ci.yml
+++ b/,github/workflows/ci.yml
@@ -1,67 +1,93 @@
-name: CI
+name: CI/CD
 
 on:
-  pull_request:
   push:
-    branches: ["main", "develop"]
+    branches: [ "main" ]
+  pull_request:
 
 jobs:
-  backend:
-    name: Backend CI
+  # -------------------------
+  # Detect which folder changed
+  # -------------------------
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      backend: ${{ steps.filter.outputs.backend }}
+      frontend: ${{ steps.filter.outputs.frontend }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            backend:
+              - 'backend/**'
+            frontend:
+              - 'frontend/**'
+
+  # -------------------------
+  # Backend CI
+  # -------------------------
+  backend-ci:
+    needs: changes
+    if: needs.changes.outputs.backend == 'true'
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: backend
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Use Node.js 18
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: npm
+          node-version: 20
+          cache: "npm"
           cache-dependency-path: backend/package-lock.json
 
       - name: Install
         run: npm ci
 
-      - name: Lint (optional)
+      - name: Lint (if exists)
         run: npm run lint --if-present
 
-      - name: Test (optional)
+      - name: Test (if exists)
         run: npm test --if-present
 
-      - name: Build (optional)
-        run: npm run build --if-present
-
-  frontend:
-    name: Frontend CI
+  # -------------------------
+  # Frontend CI
+  # -------------------------
+  frontend-ci:
+    needs: changes
+    if: needs.changes.outputs.frontend == 'true'
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: frontend
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Use Node.js 18
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: npm
+          node-version: 20
+          cache: "npm"
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install
         run: npm ci
 
-      - name: Lint (optional)
-        run: npm run lint --if-present
-
-      - name: Test (optional)
-        run: npm test --if-present
-
       - name: Build
         run: npm run build
+
+  # -------------------------
+  # Deploy Backend (Render Hook)
+  # -------------------------
+  deploy-backend:
+    needs: [changes, backend-ci]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.changes.outputs.backend == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger Render deploy
+        if: secrets.BACKEND_DEPLOY_HOOK != ''
+        run: curl -X POST "${{ secrets.BACKEND_DEPLOY_HOOK }}"
+
