--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-
   "engines": {
     "node": "20.x"
   },
@@ -24,6 +23,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3",
     "tailwind-merge": "latest"
   },
