--- a/package.json
+++ b/package.json
@@ -1,17 +1,47 @@
 {
-  "name": "demo",
-  "version": "1.0.0",
-  "description": "A full-stack apparel swapping platform built with **React**, **Node.js**, and **MongoDB** to promote sustainable fashion by enabling users to list, browse, and swap unused clothing items.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+
+  "engines": {
+    "node": "20.x"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.57.1"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "axios": "^1.13.4",
+    "clsx": "latest",
+    "lucide-react": "0.522.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
+    "socket.io-client": "^4.8.3",
+    "tailwind-merge": "latest"
+  },
   "devDependencies": {
-    "autoprefixer": "^10.4.24",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^20.11.18",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "latest",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "postcss": "latest",
+    "tailwindcss": "3.4.17",
+    "vite": "^7.2.4"
   }
 }
