--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-
   "engines": {
     "node": "20.x"
   },
@@ -20,10 +19,12 @@
     "@emotion/react": "^11.13.3",
     "axios": "^1.13.4",
     "clsx": "latest",
+    "framer-motion": "^12.34.3",
     "lucide-react": "0.522.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3",
     "tailwind-merge": "latest"
   },
